<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/dark_blue"
    tools:context=".AddDetails">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Enter Movie Details"
        android:id="@+id/textView20"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Title"
        android:id="@+id/textView21"
        android:layout_below="@+id/textView20"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="28dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/EditTextTitle"
        android:hint="@string/title"
        android:layout_alignBottom="@+id/textView21"
        android:layout_alignRight="@+id/textView20"
        android:layout_alignEnd="@+id/textView20"
        android:layout_toRightOf="@+id/textView24"
        android:layout_toEndOf="@+id/textView24" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Year"
        android:id="@+id/textView22"
        android:layout_alignBottom="@+id/EditTextYear"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/EditTextYear"
        android:hint="@string/year"
        android:layout_below="@+id/EditTextTitle"
        android:layout_alignLeft="@+id/EditTextTitle"
        android:layout_alignStart="@+id/EditTextTitle"
        android:layout_alignRight="@+id/EditTextTitle"
        android:layout_alignEnd="@+id/EditTextTitle" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Rating"
        android:id="@+id/textView23"
        android:layout_alignBottom="@+id/EditTextRated"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/EditTextRated"
        android:hint="@string/rated"
        android:layout_below="@+id/EditTextYear"
        android:layout_alignLeft="@+id/EditTextYear"
        android:layout_alignStart="@+id/EditTextYear"
        android:layout_alignRight="@+id/EditTextYear"
        android:layout_alignEnd="@+id/EditTextYear" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Released"
        android:id="@+id/textView24"
        android:layout_alignBottom="@+id/EditTextReleased"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/EditTextReleased"
        android:hint="@string/realeased"
        android:layout_below="@+id/EditTextRated"
        android:layout_toRightOf="@+id/textView24"
        android:layout_alignRight="@+id/EditTextRated"
        android:layout_alignEnd="@+id/EditTextRated" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Runtime"
        android:id="@+id/textView25"
        android:layout_alignBottom="@+id/EditTextRuntime"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/EditTextRuntime"
        android:hint="@string/runtime"
        android:layout_below="@+id/EditTextReleased"
        android:layout_toRightOf="@+id/textView24"
        android:layout_alignRight="@+id/EditTextReleased"
        android:layout_alignEnd="@+id/EditTextReleased" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Actors"
        android:id="@+id/textView27"
        android:layout_alignBottom="@+id/EditTextActors"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/EditTextActors"
        android:hint="@string/actors"
        android:layout_below="@+id/EditTextRuntime"
        android:layout_alignLeft="@+id/EditTextRuntime"
        android:layout_alignStart="@+id/EditTextRuntime"
        android:layout_alignRight="@+id/EditTextRuntime"
        android:layout_alignEnd="@+id/EditTextRuntime" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Plot"
        android:id="@+id/textView28"
        android:layout_alignBottom="@+id/EditTextPlot"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/EditTextPlot"
        android:hint="@string/plot"
        android:layout_below="@+id/EditTextActors"
        android:layout_alignLeft="@+id/EditTextActors"
        android:layout_alignStart="@+id/EditTextActors"
        android:layout_alignRight="@+id/EditTextActors"
        android:layout_alignEnd="@+id/EditTextActors" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Genre"
        android:id="@+id/textView26"
        android:layout_alignTop="@+id/SpinnerFeedbackType"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/SpinnerFeedbackType"
        android:layout_below="@+id/EditTextPlot"
        android:layout_alignLeft="@+id/EditTextPlot"
        android:layout_alignStart="@+id/EditTextPlot"
        android:layout_marginTop="29dp"
        android:entries="@array/genretypelist"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ADD"
        android:id="@+id/button2"
        android:onClick="updateDetails"
        android:background="@color/black"
        android:textColor="@color/white"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>